  * kde: kernel: kernel-remove reload problem solved
  * kde: network: tab problem solved
  * kde: network: networkcard reload problem solved
  * kde: services: type 
  * kde: services: descriptions updated
  * kde: services: descriptions updated
  * cli: kernel: amd bug solved
  * kde: kernel: automatical kernel install option added 
  * kde: konsole implementation improved 

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 24 Mar 2008 16:16:21 +0100

siduxcc (0.9.30) unstable; urgency=low

  * cli: kernel: install function fixed

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 16 Mar 2008 23:58:13 +0100

siduxcc (0.9.29) unstable; urgency=low

  * kde: kernel: update function updated 

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 16 Mar 2008 17:25:57 +0100

siduxcc (0.9.28) unstable; urgency=low

  [ Joaquim Boura ]
  * fr translations of siduxcckde actualized. thks to Alpha Diakite (alphad) &
    sidux.fr team

  [ Stefan Lippers-Hollmann ]
  * fix po syntax errors.
  * relibtoolize.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 16 Mar 2008 15:11:22 +0100

siduxcc (0.9.27) unstable; urgency=low

  * hermes: new and kernel tab added
  * kde: software: tooltips added
  * kde: network: qwhatsthis added
  * icons: hermes icons updated
  * hermes: legend updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 14 Mar 2008 23:23:08 +0100

siduxcc (0.9.26) unstable; urgency=low

  [ Bernard Gray ]
  * begin work on a new hermes upgrade-ok icon 
  * add new upgrade-warning candidate icon
  * tweak upgrade-ok candidate icon
  * add another upgrade-ok and warning candidate 
  * make sidux-warning5 bg grayscale to enhance warning effect 

  [ Fabian Wuertz ]
  * translation: de: hermes: updated 

 -- Bernard Gray <bernard.gray@gmail.com>  Fri, 14 Mar 2008 01:04:59 +1100

siduxcc (0.9.25) unstable; urgency=low

  * kde: services: descriptions added  
  * hermes: duWarningsDe fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 13 Mar 2008 00:54:32 +0100
